spring-cloud-kubernetes-examples/kubernetes-leader-election-example/traefik-kubernetes-leader-election-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "traefik" # 从nginx修改traefik
  name: ingress-k8s-example
  namespace: default
spec:
  rules:
    - host: k8sexample.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  kubernetes-leader-election-example
                port:
                  number: 80
